--- a/vue-tutorial/index.html
+++ b/vue-tutorial/index.html
@@ -20,7 +20,7 @@
                 <h1>{{product}}</h1>
                 <p v-if="inventory > 10"> In Stock </p>
                 <p v-else-if="inventory <= 10 && inventory > 0"> Almost Out of Stock!</p>
-                <p v-else> Out Of Stock</p>
+                <p v-else :class="{outOfStock: !inStock}"> Out Of Stock</p>
                 <p v-show="inStock"> Show elements ( more efficient than v-if which removes the element from DOM)</p>
                 <p v-if="onSale">On Sale!</p>
 
@@ -32,13 +32,24 @@
                     <li v-for="size in sizes" v-bind:key="size"> {{size}} </li>
                 </ul>
 
-                <div v-for="val in variants" v-bind:key="val.variantId">
-                    <p>{{val.variantColor}}</p>
+                <div v-for="val in variants" v-bind:key="val.variantId" class="color-box"
+                    :style="{backgroundColor:val.variantColor}" @mouseover="updateProduct(val.image)">
                 </div>
+
+                <button v-on:click="addToCart" :disabled="!inStock" :class="{disabledButton: !inStock}"> Add to Cart
+                </button>
+                <button @click="removeFromCart"> Remove from Cart</button>
+
+                <div class="cart">
+                    <p>Cart {{cart}}</p>
+                </div>
+
             </div>
+
             <div class="product-link">
                 <a v-bind:href="linkurl"> Link to SO stuff</a>
             </div>
+
         </div>
     </div>
 
