--- a/vue-tutorial/index.html
+++ b/vue-tutorial/index.html
@@ -12,7 +12,10 @@
 <body>
     <div class="nav-bar"></div>
     <div id="app">
-        <product></product>
+        <div class="cart">
+            <p>Cart {{cart.length}}</p>
+        </div>
+        <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeFromCart"></product>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
